lab23/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: demo
  name: php-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: demo
  type: ClusterIP
